--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build"
   },
+  "peerDependencies": {
+    "react": "^0.13.0 || ^0.14.0 || ^15.0.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "6.9.1",
-    "babel-preset-es2015": "6.9.0"
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "react": "^15.4.1"
   },
   "version": "0.1.0"
 }
