--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react": "^15.4.1",
     "rimraf": "^2.5.4"
   },
-  "version": "0.1.7"
+  "version": "0.1.8",
+  "dependencies": {
+    "exenv": "^1.2.2"
+  }
 }
