--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "react": "^0.13.0 || ^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "6.9.1",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "react": "^15.4.1",
     "rimraf": "^2.5.4"
   },
-  "version": "0.1.8",
+  "version": "0.1.9",
   "dependencies": {
     "exenv": "^1.2.2"
   }
