--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "site:publish": "npm run site:clean && npm run site:build && cp CNAME example/build && cd example/build && git init && git commit --allow-empty -m 'update example' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update example' && git push git@github.com:buildize/gridual gh-pages --force"
   },
   "peerDependencies": {
-    "react": "^0.13.0 || ^0.14.0 || ^15.0.0"
+    "react": "^0.13.0 || ^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -23,7 +23,7 @@
     "react": "^15.4.1",
     "rimraf": "^2.5.4"
   },
-  "version": "0.1.9",
+  "version": "0.1.10",
   "dependencies": {
     "exenv": "^1.2.2"
   }
