--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["es2015", "stage-0", "react"]
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-class-properties"
+  ],
+  "presets": [
+    "@babel/env",
+    "@babel/preset-react"
+  ]
 }
