--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "gridual",
-  "main": "lib-es5/index.js",
-  "module": "lib-es6/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build:es5": "babel src --out-dir lib-es5",
-    "build:es6": "babel --no-babelrc src --out-dir lib-es6 --presets=stage-0,react",
-    "build": "npm run build:es5 && npm run build:es6",
+    "build": "babel src --out-dir lib",
     "prepublish": "npm run build",
     "site:clean": "rimraf example/build",
     "site:build": "cd example && npm run build",
@@ -15,13 +12,14 @@
     "react": "^0.13.0 || ^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "react": "^15.4.1",
-    "rimraf": "^2.5.4"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "react": "^16.7.0",
+    "rimraf": "^2.6.2"
   },
   "version": "0.1.10",
   "dependencies": {
