--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "plugins": [
     "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "styled-jsx/babel"
   ],
   "presets": [
     "@babel/env",
