--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "react": "^16.7.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "styled-jsx": "^3.1.3"
   },
   "version": "0.1.10",
   "dependencies": {
