--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "rimraf": "^2.6.2",
     "styled-jsx": "^3.1.3"
   },
-  "version": "0.1.10",
+  "version": "1.0.0-alpha.1",
   "dependencies": {
     "exenv": "^1.2.2"
   }
