--- a/package.json
+++ b/package.json
@@ -2,27 +2,28 @@
   "name": "gridual",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src --out-dir lib",
+    "build": "babel src -d lib",
     "prepublish": "npm run build",
     "site:clean": "rimraf example/build",
     "site:build": "cd example && npm run build",
     "site:publish": "npm run site:clean && npm run site:build && cp CNAME example/build && cd example/build && git init && git commit --allow-empty -m 'update example' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update example' && git push git@github.com:buildize/gridual gh-pages --force"
   },
   "peerDependencies": {
-    "react": "^0.13.0 || ^0.14.0 || ^15.0.0 || ^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "rimraf": "^2.6.2",
-    "styled-jsx": "^3.1.3"
+    "styled-components": "^4.1.3"
   },
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "dependencies": {
     "exenv": "^1.2.2"
   }
