--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "styled-components": "^4.0.0"
+    "styled-components": ">= 4.0.0 < 6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -24,7 +24,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-alpha.10",
   "dependencies": {
     "next-transpile-modules": "^2.0.0",
     "styled-components": "^4.1.3"
