--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "version": "1.0.0-alpha.10",
+  "version": "1.0.0-alpha.11",
   "dependencies": {
-    "next-transpile-modules": "^2.0.0",
-    "styled-components": "^4.1.3"
+    "next-transpile-modules": "^2.0.0"
   }
 }
